# astrbot-cli

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
astrbot_cli/: __init__.py  cli.py
astrbot_cli/src/: path_config.py  platform.py  platform_settings.py  platform_settings_utils.py  platform_utils.py  plugin.py  plugin_utils.py  quick_start.py  system.py  workflows.py  workflows_utils.py
astrbot_cli/src/workflows/: plugin-debug.yaml
docs/development/: TODO.md
docs/development/26-04-12/: user.md
docs/development/26-04-13/: user.md
