[project]
name = "astrbot-cli"
version = "0.1.0"
description = "AstrBot CLI - Command Line Interface for AstrBot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tyro>=0.8.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
astrbot-cli = "astrbot_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["astrbot_cli"]
